fix spacing

--- a/components/HeroBanner/heroBanner.module.css
+++ b/components/HeroBanner/heroBanner.module.css
@@ -1,5 +1,6 @@
 .banner {
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .floatBg {
